# gildnn

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  PROCESS.md  README.md  VISION.md  harness.ps1  loop.ps1  pyproject.toml
aspects/desynchronized-depth/: NOTE.md
aspects/dynamic-chunking/: NOTE.md
aspects/dynamic-depth/: NOTE.md
aspects/loss-forecasting/: NOTE.md
base/: ROADMAP.md
base-experiments/autoregressive-mnist/: Cargo.toml  README.md
base-experiments/autoregressive-mnist-sampling-orders/: report.md
base-experiments/autoregressive-patch-mnist/: README.md  report.md
base-experiments/character-language-model/: README.md
base/01-hello-world-mnist-classifier/: Cargo.toml  NOTE.md  benchmark.json
base/01-hello-world-mnist-classifier/experiments/mnist_baseline/: config.json
base/01-hello-world-mnist-classifier/src/: main.rs
core/: Cargo.toml  __init__.py  fixed_window_char.py  tiny_char_transformer.py
core/mnist-core/src/: image.rs  schedule.rs
core/src/: experiment.rs  lib.rs  metrics.rs  report.rs  rng.rs  visualization.rs
dictations/: 2025-05-08-1.md  2025-05-08-2.md  2025-05-08-3.md  2025-05-08-4.md  2025-05-08-5.md  2025-05-08-6.md
experiments/: README.md  __init__.py  pytorch_char_dynamic_depth.py  pytorch_char_mix_add_comparison.py  pytorch_char_rnn_baseline.py  pytorch_char_sanity_check.py  pytorch_char_transformer_baseline.py
research/: AGENTS.md  WRITING.md  burn_candle_ops.md
rust-archive/: Cargo.toml  README.md
rust-archive/core/mnist-core/: Cargo.toml
rust-archive/core/mnist-core/src/: dataset.rs  lib.rs
(+90 files in other folders)
