[package]
name = "gildnn-core"
version = "0.1.0"
edition = "2021"
description = "Shared experiment infrastructure for gildnn"
license = "MIT OR Apache-2.0"

[lib]
name = "gildnn_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std"] }
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.21"
