[package]
name = "gildnn-experiment-mnist"
version = "0.1.0"
edition = "2021"
description = "MNIST baseline experiment built on burn + candle"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
burn = { version = "0.18.0", features = ["train", "std", "candle"] }
burn-autodiff = "0.18.0"
burn-candle = "0.18.0"
burn-dataset = { version = "0.18.0", features = ["vision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std"] }
gildnn-core = { path = "../../core" }
